# GestureBridge

./: .gitignore  README.md  esp32_camera.ino  pyproject.toml  start_gesturebridge.sh
artifacts/: evaluation_report.json  model_baseline.npz  model_baseline_int8.npz  power_report.json  training_report.txt
data/: class_centers.npy  test.npz  train.npz  val.npz
docs/: deliverables.md  hardware_tradeoff.md  release_candidate.md  specification.md  test_matrix.md  vocabulary.csv
firmware/: README.md
notes/: commit_conventions.md  improvement_run_log.md  iteration_log.md  pi_preflight_checklist.md  pre.md  yizheng_update_2026-04-30_evening.md  yizheng_wechat.md
report/: demo_video_script.md  draft.md  gesturebrige_acm.tex  slides.md  video_narration.md  video_plan_v2.md
scripts/: benchmark_tflite_rpi.py  calibrate_word_ensemble.py  camera_test.html  capture_calibration_set.py  convert_kaggle_wlasl100_landmarks.py  deploy_to_pi.sh  eval_a100_ensemble.py  eval_ensemble.py  eval_holdout_test.py  eval_split.py  evaluate_mobilenetv3_asl29.py  evaluate_model.py  export_bigconv1d_to_npz.py  export_tflite_int8_asl29.py  extract_landmarks.py  extract_wlasl_landmarks.py  fetch_vosk_small.sh  fetch_word_clips.sh  finetune_demo_words.py  hardware_smoke_test.py  healthcheck_runtime.py  per_class_letter_report.py  power_benchmark.py  precrop_dataset.py  predict_word_clip.py  prepare_asl29.py  prepare_wlasl100.py  record_demo_vocab.py  run_realtime_asl29.py  run_realtime_asl29_headless.py  sanity_check_split.py  serial_monitor.py  set_default_mic_c270.sh  test_camera_speaker.sh  (+8 more)
(+69 files in other folders)
