[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesturebridge"
version = "0.1.0"
description = "Multi-mode gesture communication system for edge devices"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ml = [
  "tensorflow>=2.16",
  "pandas>=2.2",
  "pillow>=10.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "opencv-python>=4.9",
  "kaggle>=1.6",
]
speech = [
  "vosk>=0.3.45",
  "sounddevice>=0.4.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
